# patron-authorization-service-azure-func

./: .env.template  .gitignore  README.md  function_app.py  host.json  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python.yml  azure-functions-prod.yml  azure-functions-stage.yml  promote-to-production.yml
WrapperFunction/: __init__.py  settings.template.py
WrapperFunction/models/: exceptions.py  parameter.py  patron.py  user_block.py  user_role.py  value_desc.py  value_only.py
terraform/: .gitignore  main.tf  outputs.tf  variables.tf
