[tool.poetry]
name = "patron-authorization-service-azure-func"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "^0.7.0"
anyio = "^4.7.0"
azure-functions = "^1.21.3"
certifi = "^2024.8.30"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
dnspython = "^2.7.0"
email-validator = "^2.2.0"
fastapi = "^0.115.6"
fastapi-cli = "^0.0.6"
h11 = "^0.14.0"
httpcore = "^1.0.7"
httptools = "^0.6.4"
httpx = "^0.28.1"
idna = "^3.10"
jinja2 = "^3.1.6"
markdown-it-py = "^3.0.0"
markupsafe = "^3.0.2"
mdurl = "^0.1.2"
pydantic = "^2.10.3"
pydantic-core = "^2.27.1"
pygments = "^2.18.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
pyyaml = "^6.0.2"
requests = "^2.32.3"
rich = "^13.9.4"
rich-toolkit = "^0.12.0"
shellingham = "^1.5.4"
sniffio = "^1.3.1"
starlette = "^0.41.3"
typer = "^0.15.1"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.3"
uvicorn = "^0.32.1"
uvloop = "^0.21.0"
watchfiles = "^1.0.1"
websockets = "^14.1"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
