[tool.poetry]
name = "patron-authorization-service-azure-func"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.21.3"
email-validator = "^2.2.0"
fastapi = "^0.115.6"
fastapi-cli = "^0.0.6"
httptools = "^0.6.4"
httpx = "^0.28.1"
jinja2 = "^3.1.4"
pipdeptree = "^2.25.0"
poetry-plugin-export = "^1.8.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
pyyaml = "^6.0.2"
uvloop = "^0.21.0"
watchfiles = "^1.0.1"
websockets = "^14.1"
setuptools = "^75.8.2"
wheel = "^0.45.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
